<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="label_dummy">dummy</string>
    <string name="dummy_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_title_name">Alita: Battle Angel (2019)</string>
    <string name="dummy_date">21/12/2018 (US)</string>
    <string name="dummy_genre">Aksi, Petualangan, Misteri</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tv_show">Detail TV Show</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="date_movie">Date</string>
    <string name="label_trailer">Trailer</string>
    <string name="label_tv_show">TV Show</string>
    <string name="label_movie">Movie</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="label_empty">Data Kosong</string>
</resources>